Small tweak to improve callouts

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -62,8 +62,7 @@
 	}*/
 }
 
-p[class^="callout"],
-div[class^="callout"] {
+*[class^="callout"] {
     padding: .75em 1em;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-vertical 0;
