--- a/libs/base/helpers.less
+++ b/libs/base/helpers.less
@@ -4,7 +4,7 @@
  */
 
 
-// .no-js is set on <html>, a script changes it to .js if scripts are running 
+// .no-js is set on <html>, a script changes it to .js if scripts are running
 .js .hide-js {display: none;}
 .no-js .hide-no-js {display: none;}
 
@@ -19,7 +19,7 @@
 
 // Using these should generally be avoided in favour of
 // setting these properties explicitly using a selector
-// they are occasionally useful, though 
+// they are occasionally useful, though
 .right {float: right;}
 .hide {display: none;}
 
@@ -37,7 +37,8 @@
 
 // https://www.drupal.org/node/897638
 .screenreader--focusable {
-    &:active,&:focus {
+    &:active,
+    &:focus {
         clip: auto;
         height: auto;
         margin: 0;
