--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -35,7 +35,8 @@
     color: @link-color;
     font-size: 75%;
 }
-.a-external-link:after {
+.a-external-link:after,
+.a-external:after {
     content: @i-external-link;
     &:extend(.inline-icon);
 }
