--- a/libs/site.less
+++ b/libs/site.less
@@ -16,7 +16,7 @@
 @import "base/type";
 @import "base/utility";
 @import "base/helpers";
-@import "base/simplegrid";
+@import "base/simplegrid"; // 7kb!
 
 /* Mixin files */
 @import "mixins/buttons";
