--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -141,16 +141,14 @@ th {
     width: 100%;
 }
 
-.td {
-    &--green {
-        background-color: @green-lighter;
-    }
-    &--amber {
-        background-color: @yellow-light;
-    }
-    &--red {
-        background-color: @red-lighter;
-    }
+.td--green {
+    background-color: @green-lighter;
+}
+.td--amber {
+    background-color: @yellow-light;
+}
+.td--red {
+    background-color: @red-lighter;
 }
 
 /*Blind Table*/
@@ -182,6 +180,7 @@ th {
 
 
 /*Simple Table*/
+// What is this?
 table.simple-table,
 table.simple-table tr,
 table.simple-table th,
