--- a/libs/guide.less
+++ b/libs/guide.less
@@ -1,14 +1,15 @@
-@import "site";
-@import "vendors/prism/prism";
-
-/* Base */
-
 /**
  * Style Guide
  *
  * Basic utility classes.
  * And one or two odds and ends that coule be moved elsewhere at some point.
  */
+
+// Import all website styles
+@import "site";
+
+// Import styleguide specific styles
+@import "vendors/prism/prism";
 
 body {
     padding-top:        0px;
