Removed boxes.less from site.less

--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -1,8 +1,7 @@
 /**
  * BOXES
  *
- * Beta boxes.
- *
+ * Would be good to try and remove this completely, in place of callouts
  */
 
 // Move to mixins
@@ -67,7 +66,7 @@
 
 
 
- .beta-box() {
+.beta-box() {
     background-color: @gray-7;
     border-top-width: 4px;
 
