--- a/libs/site.less
+++ b/libs/site.less
@@ -52,7 +52,7 @@
 @import "modules/revealable";
 //@import "modules/staff";
 @import "modules/status";
-@import "modules/boxes";
+//@import "modules/boxes";
 @import "modules/sidebar-navigation";
 @import "modules/sidebar-navigation-accordion";
 @import "modules/footer-feedback";
