--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -9,142 +9,143 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+}
 
-	&__modal {
-		/* The position, display and transform are used for feature tests in the script.  Things might break if these are changed */
-		position: fixed;
-		/* See https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/ */
-		top: 50%;
-		left: 50%;
-		-moz-transform: translate(-50%, -50%);
-		-webkit-transform: translate(-50%, -50%);
-		-ie-transform: translate(-50%, -50%);
-		-o-transform: translate(-50%, -50%);
-		transform: translate(-50%, -50%);
+.overlay__modal {
+	/* The position, display and transform are used for feature tests in the script.  Things might break if these are changed */
+	position: fixed;
+	/* See https://css-tricks.com/quick-css-trick-how-to-center-an-object-exactly-in-the-center/ */
+	top: 50%;
+	left: 50%;
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-ie-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 
-		/* Max width prevents the dialog being wider than the screen */
-		width: 65em;
-		max-width: 70%;
-		/* Max height prevents the dialog being taller than the screen */
-		max-height: 80%;
+	/* Max width prevents the dialog being wider than the screen */
+	width: 65em;
+	max-width: 70%;
+	/* Max height prevents the dialog being taller than the screen */
+	max-height: 80%;
 
-	    @media( max-width: @screen-xs-max ) {
-	        max-width: 95%;
-	        max-height: 95%;
-	    }
+    @media( max-width: @screen-xs-max ) {
+        max-width: 95%;
+        max-height: 95%;
+    }
 
-		background: @white;
-		/* We will limit ourselves to the new syntax and the IE tweener syntax */
-		display: -webkit-flex;
-		display: flex;
-		-webkit-flex-direction: column;
-		flex-direction: column;
-		-webkit-justify-content: space-between;
-		justify-content: space-between;
-		-webkit-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
-		-moz-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
-		box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
+	background: @white;
+	/* We will limit ourselves to the new syntax and the IE tweener syntax */
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
+	-webkit-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 30px -9px rgba(0,0,0,0.75);
+}
+
+.overlay__header {
+	//border-bottom: 1px solid @gray-6;
+	padding: @box-spacing-vertical 0;
+	//background-color: @heritage-blue-lightest;
+	//&:extend(h3);
+	position: relative;
+	-webkit-flex-shrink: 0;
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	//margin-bottom: @box-spacing-vertical*2;
+	//.btn-icon("\f00d",@color:@heritage-blue);
+}
+
+
+.overlay__main {
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	padding: @box-spacing-vertical @box-spacing-horizontal;
+	& >:first-child {
+		margin-top: 0;
 	}
+	& >:last-child {
+		margin-bottom: 0;
+	}
+}
 
-	&__header {
-		//border-bottom: 1px solid @gray-6;
-		padding: @box-spacing-vertical 0;
-		//background-color: @heritage-blue-lightest;
-		//&:extend(h3);
+.reference__list {
+	list-style: none;
+	padding: 0;
+	li {
 		position: relative;
-		-webkit-flex-shrink: 0;
-		-ms-flex-negative: 0;
-		flex-shrink: 0;
-		//margin-bottom: @box-spacing-vertical*2;
-		//.btn-icon("\f00d",@color:@heritage-blue);
-	}
-
-
-	&__main {
-		overflow-y: auto;
-		-webkit-overflow-scrolling: touch;
-		padding: @box-spacing-vertical @box-spacing-horizontal;
-		& >:first-child {
-			margin-top: 0;
+		margin: 0;
+		p {
+			padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75 @box-spacing-vertical*.75 @box-spacing-horizontal*4;
+			margin: 0;
 		}
-		& >:last-child {
-			margin-bottom: 0;
+		button {
+			.btn-icon("\f014");
+			.vertical-align(absolute);
+			right: unit(@box-spacing-horizontal*.75*@base-size,px);
+			right: @box-spacing-horizontal*.75;
+			margin: 0;
+			padding: @box-spacing;
+			&:hover ~ p {
+				background-color: @red-lightest;
+			}
 		}
-		.reference__list {
-			list-style: none;
-			padding: 0;
-			li {
-				position: relative;
+		&.removed {
+			background-color: @red-lightest;
+			a {
+				//text-decoration: line-through;
+				color: @red;
+			}
+			button {
+				.btn-icon("\f0e2");
+				.vertical-align(absolute);
+				right: unit(@box-spacing-horizontal*.75*@base-size,px);
+				right: @box-spacing-horizontal*.75;
 				margin: 0;
-				p {
-					padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75 @box-spacing-vertical*.75 @box-spacing-horizontal*4;
-					margin: 0;
-				}
-				button {
-					.btn-icon("\f014");
-					.vertical-align(absolute);
-					right: unit(@box-spacing-horizontal*.75*@base-size,px);
-					right: @box-spacing-horizontal*.75;
-					margin: 0;
-					padding: @box-spacing;
-					&:hover ~ p {
-						background-color: @red-lightest;
-					}
-				}
-				&.removed {
-					background-color: @red-lightest;
+				padding: @box-spacing;
+				&:hover ~ p {
+					background-color: @gray-8;
 					a {
-						//text-decoration: line-through;
-						color: @red;
-					}
-					button {
-						.btn-icon("\f0e2");
-						.vertical-align(absolute);
-						right: unit(@box-spacing-horizontal*.75*@base-size,px);
-						right: @box-spacing-horizontal*.75;
-						margin: 0;
-						padding: @box-spacing;
-						&:hover ~ p {
-							background-color: @gray-8;
-							a {
-								text-decoration: none;
-							}
-						}
-					}
-					a {
-						border: none;
+						text-decoration: none;
 					}
 				}
 			}
+			a {
+				border: none;
+			}
 		}
 	}
+}
 
-	&__footer {
-		border-top: 1px solid @gray-7;
-		padding: @box-spacing-vertical @box-spacing-horizontal/2;
-		margin: 0 @box-spacing-horizontal/2;
-		-webkit-flex-shrink: 0;
-		-ms-flex-negative: 0;
-		flex-shrink: 0;
-		text-align: right;
+.overlay__footer {
+	border-top: 1px solid @gray-7;
+	padding: @box-spacing-vertical @box-spacing-horizontal/2;
+	margin: 0 @box-spacing-horizontal/2;
+	-webkit-flex-shrink: 0;
+	-ms-flex-negative: 0;
+	flex-shrink: 0;
+	text-align: right;
+	.btn {
+		margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;
+	    //font-size: @font-size-small;
+	    &.reference__list {
+			padding: @box-spacing-vertical/3 @box-spacing-horizontal/2;
+		    font-weight: 700;
+		}
+	}
+	.btn-group {
+		margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;
 		.btn {
-    		margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;
-		    //font-size: @font-size-small;
-		    &.reference__list {
-				padding: @box-spacing-vertical/3 @box-spacing-horizontal/2;
-			    font-weight: 700;
-			}
+			margin: 0;
+			margin-right: 1px;
 		}
-		.btn-group {
-    		margin: @box-spacing-horizontal*.5 0 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5;
-			.btn {
-				margin: 0;
-				margin-right: 1px;
-			}
-		}
-		.left {
-			float: left;
-    		margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
-		}
+	}
+	.left {
+		float: left;
+		margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
 	}
 }
