Dropdown fix for ie9 also

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -445,6 +445,9 @@ input[class*="dob-"] {
     .ie8 & select {
         width: auto;
     }
+    select {
+        width: auto \9;
+    }
 }
 
 // Custom dropdown icons
