Fixed missing breadcrumb arrows >

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -245,43 +245,49 @@
 // For search box in header
 .icon-search:before {
     content: @i-search;
-    &:extend(.icon);
+    .icon;
 }
 
 // For sharebar
 .icon-star:before {
     content: @i-star;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-word:before {
     content: @i-doc-word;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-print:before {
     content: @i-print;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-email:before {
     content: @i-email;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-google:before {
     content: @i-google;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-facebook:before {
     content: @i-facebook;
-    &:extend(.icon);
+    .icon;
 }
 
 .icon-twitter:before {
     content: @i-twitter;
-    &:extend(.icon);
+    .icon;
+}
+
+// For breadcrumbs
+.icon-guillemet-right:before {
+    content: @i-angle-right;
+    .icon;
 }
 
 /*
