Fixed alignment of + - button in old browsers

--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -76,7 +76,7 @@ i.icon-chevron-up {
         font-family: 'cab-icons';
         content: "\f067";
         padding: 0 @box-spacing-horizontal*1.25;
-        .vertical-align(absolute);
+        position: absolute;
         right: 0;
     }
     > *:first-child {
