--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -104,3 +104,5 @@ block content
 						a(href="speech-line.html") Speech line
 					li
 						a(href="brand-icons.html") Brand icons
+					//li
+						a(href="slider.html") Slider
