--- a/libs/template/sidebar-brand.jade
+++ b/libs/template/sidebar-brand.jade
@@ -3,4 +3,5 @@
 	{href: "cards.html", title: "Cards"},
     {href: "speech-line.html", title: "Speech line"},
 	{href: "brand-icons.html", title: "Brand icons"}
+    //{href: "slider.html", title: "Slider"}
 ])
