Removed simplygrid from site and tools, and added to guide

--- a/libs/tools.less
+++ b/libs/tools.less
@@ -19,7 +19,7 @@
 	@import "base/type";
 	@import "base/utility";
 	@import "base/helpers";
-	@import "base/simplegrid";
+	//@import "base/simplegrid";
 
 	/* Mixin files */
 	@import "mixins/buttons";
