Created notice style and added it to template for IE8

--- a/libs/site.less
+++ b/libs/site.less
@@ -82,6 +82,7 @@
 @import "modules/share-bar";
 @import "modules/overlay";
 @import "modules/adviser";
+@import "modules/notice";
 
 /* IE styles */
 @import "base/ie";
