--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -293,6 +293,10 @@ html
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 
+		.notice
+			.notice__content
+				p We no longer support Internet Explorer 8. To avoid problems viewing this website, please consider upgrading to #[a.a-external-link(href="#") Google Chrome].
+
 		<!--[if IE 8]></div><![endif]-->
 		script(src="js/advisor.js")
 		script(src="js/core.js")
