Renamed to 'Browser Notice' and added to index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -39,7 +39,7 @@ block content
 								a(href="fields.html") Fields
 							li
 								a(href="field-groups.html") Field groups
-								
+
 			.span4
 				h2#modules Modules
 				ul
@@ -61,7 +61,9 @@ block content
 						a(href="toolbar.html") Content toolbar
 					li
 						a(href="cookie-monster.html") Cookie Monster
-					li 
+					li
+						a(href="notice.html") Browser notice
+					li
 						h4#modals Modals
 						ul
 							li
@@ -86,7 +88,7 @@ block content
 					//li
 					//	a(href="employment-checker.html") Example of in-content tool
 
-					// Example PIP content  
+					// Example PIP content
 					//li
 					//	a(href="pip-index.html") Help with filling out PIP2 form
 					//li
