--- a/libs/jade/notice.jade
+++ b/libs/jade/notice.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Notice"
+	- var title = "Browser notice"
 	- var sidebar = true
 
 extends ../template/template.jade
@@ -8,7 +8,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
 		{title: "Modules", href: "index.html#modules"},
-		{title: "Notice"}])
+		{title: "Browser notice"}])
 
 block sidebar
 	include ../template/sidebar-modules.jade
