Made swatches square without breaking their grid

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -411,11 +411,9 @@ pre[class*="language-"] {
  * Swatches
  */
 .swatch {
-    height: 110px;
-    width: 110px;
     margin-right: 20px;
     margin-bottom: 10px;
-    border-radius: 10px;
+    border-radius: @form-border-radius;
     text-align: center;
     line-height: (@line-height-base * 0.5);
     float: left;
