--- a/libs/jade/cards.jade
+++ b/libs/jade/cards.jade
@@ -7,7 +7,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Branding", href: "index.html#branding"}, 
+		{title: "Branding", href: "index.html#branding"},
 		{title: "Cards"}])
 
 block sidebar
@@ -30,13 +30,13 @@ block content
 			pre
 				code.language-html
 					| &lt;div class="cards"&gt;
-					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
-					| &lt;/div&gt;
-					| &lt;div class="card-text"&gt;
-					| 	&lt;h3&gt;Title&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| &lt;/div&gt;
+					| 	&lt;div class="card-image-top"&gt;
+					| 		&lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="card-text"&gt;
+					| 		&lt;h3&gt;Title&lt;/h3&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
 
@@ -55,23 +55,24 @@ block content
 			pre
 				code.language-html
 					| &lt;div class="cards"&gt;
-					| &lt;div class="row"&gt;
-					| &lt;div class="span6"&gt;
-					| &lt;div class="card-image-left"&gt;
-					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
-					| &lt;/div&gt;
-					| &lt;div class="span6"&gt;
-					| &lt;div class="card-text-left"&gt;
-					| 	&lt;h3&gt;Title&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| &lt;/div&gt;
-					| &lt;/div&gt;
-					| &lt;/div&gt;
+					| 	&lt;div class="row"&gt;
+					| 		&lt;div class="span6"&gt;
+					| 			&lt;div class="card-image-left"&gt;
+					| 				&lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| 			&lt;/div&gt;
+					| 		&lt;/div&gt;
+					| 		&lt;div class="span6"&gt;
+					| 			&lt;div class="card-text-left"&gt;
+					| 				&lt;h3&gt;Title&lt;/h3&gt;
+					| 				&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 			&lt;/div&gt;
+					| 		&lt;/div&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
 
 
 			.example-box-plain
-				label Extending 
+				label Extending
 				.row
 					.span6
 						.cards
@@ -92,24 +93,30 @@ block content
 
 			pre
 				code.language-html
-					| &lt;div class="row"&gt;
-					| &lt;div class="span6"&gt;
 					| &lt;div class="cards"&gt;
-					| &lt;div class="card-banner-top"&gt;
-					| 	&lt;h3&gt;Header&lt;/h3&gt;
-					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| 	&lt;div style="color:#fff; background-color:#004b88;" class="card-banner-top"&gt;
+					| 		&lt;p&gt;Header&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="card-image-top"&gt;
+					| 		&lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					|	&lt;/div&gt;
+					| 	&lt;div class="card-text"&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
-					| &lt;div class="card-text"&gt;
-					| 	&lt;h3&gt;Title&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+					| &lt;div class="cards"&gt;
+					| 	&lt;div class="card-image-top"&gt;
+					| 		&lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="card-text"&gt;
+					| 		&lt;h3&gt;Title&lt;/h3&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 		&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
-					| &lt;/div&gt;
-
 
 			.example-box-plain
-				label Branding 
+				label Branding
 				.row
 					.span6
 						.cards(style="color:#fff; background-color:#006278;")
@@ -133,17 +140,27 @@ block content
 
 			pre
 				code.language-html
-					| &lt;div class="row"&gt;
-					| &lt;div class="span6"&gt;
-					| &lt;div class="cards"&gt;
-					| &lt;div class="card-banner-top"&gt;
-					| 	&lt;h3&gt;Header&lt;/h3&gt;
-					| &lt;div class="card-image-top"&gt;
-					| &lt;img src="images/CAB-training-session.jpg" alt="Advisers being trained in a local Citizens Advice"&gt;
+					| &lt;div style="color:#fff; background-color:#006278;" class="cards"&gt;
+					| 	&lt;div style="background-color:#006278;" class="card-banner-top"&gt;
+					| 		&lt;p style="color:#fff;"&gt;Campaigns&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="card-image-top"&gt;
+					|		&lt;img src="images/mother_with_children.jpg" alt="Mother with two daughters"&gt;
+					|	&lt;/div&gt;
+					| 	&lt;div class="card-text"&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 		&lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
-					| &lt;div class="card-text"&gt;
-					| 	&lt;h3&gt;Title&lt;/h3&gt;
-					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
-					| &lt;button type="button" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
-					| &lt;/div&gt;
+					| &lt;div style="color:#fff; background-color:#32457E;" class="cards"&gt;
+					| 	&lt;div class="card-banner-top"&gt;
+					| 		&lt;p style="color:#fff;"&gt;Policy&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="card-image-top"&gt;
+					|		&lt;img src="images/laptop-branding.png" alt="Laptop"&gt;
+					|	&lt;/div&gt;
+					| 	&lt;div class="card-text"&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.&lt;/p&gt;
+					| 		&lt;button type="button" style="background-color:#FFBF47; border-color:#FFBF47;" class="btn btn-primary right-button-icon"&gt;Continue&lt;/button&gt;
+					| 	&lt;/div&gt;
 					| &lt;/div&gt;
