Added dap-panel to the global callout styles, which should fix callout issue

--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -62,7 +62,8 @@
 	}*/
 }
 
-*[class^="callout"] {
+*[class^="callout"],
+.dap-panel {
     padding: .75em 1em;
     padding: @box-spacing-vertical @box-spacing-horizontal;
     margin: @box-spacing-vertical 0;
