Removed old link-external CSS due to conflict with new styles

--- a/libs/base/global.less
+++ b/libs/base/global.less
@@ -46,10 +46,11 @@ img {
     a {
         color: @black;
     }
-
+    /*
     .a-external:after {
         background-image: url("assets/images/icon_external_fff.png");
     }
+    */
 }
 
 
@@ -68,10 +69,11 @@ img {
     a {
         color: @white;
     }
-
+    /*
     .a-external:after {
         background-image: url("assets/images/icon_external_fff.png");
     }
+    */
 }
 
 
