--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -159,13 +159,13 @@ a.img-link:active {
     border: none;
 }
 
-// External links
-.a-external:after { /* This method is easier to deploy across the site than just using padding */
+/* Old external links
+.a-external:after { // This method is easier to deploy across the site than just using padding
     content: "";
     background: url("assets/images/icon_external.png") no-repeat center right;
     padding-right: 18px;
-    padding-right: calc(~"13px + .3em"); /* image is 13px wide.  ~ to suppress LESS calculating for us grrr*/
-}
+    padding-right: calc(~"13px + .3em"); // image is 13px wide.  ~ to suppress LESS calculating for us grrr
+}*/
 
 // Horizontal rules
 hr {
@@ -197,10 +197,10 @@ hr {
     a {
         color: @black;
     }
-
+    /*
     .a-external:after {
         background-image: url("assets/images/icon_external_fff.png");
-    }
+    }*/
 }
 
 
