Re-added icons for reference list

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -290,6 +290,28 @@
     .icon;
 }
 
+// For references
+.icon-bin:before {
+    content: @i-bin;
+    .icon;
+}
+.icon-copy:before {
+    content: @i-copy;
+    .icon;
+}
+.icon-save:before {
+    content: @i-save;
+    .icon;
+}
+.icon-load:before {
+    content: @i-load;
+    .icon;
+}
+.icon-help:before {
+    content: @i-help;
+    .icon;
+}
+
 /*
 
     ICOMOON
