Remove dropdown arrow after extent label in breadcrumb

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -110,7 +110,7 @@
         color: @white;
         margin: -.1em -.5em -.1em 1em;
         padding: .2em .3em;
-        display: inline-block;
+        display: none;
     }
 
     .js & {
