--- a/libs/jade/intro-panel.jade
+++ b/libs/jade/intro-panel.jade
@@ -15,6 +15,11 @@ block breadcrumbs
 			.intro-panel-content
 				h1 Example heading
 				p Employment and Support Allowance (ESA) is for people who have an illness, health condition or disability that makes it difficult or impossible to work.
+	.intro-panel(style="background-color:#B5AFD7; background-image: url(images/branding-development.jpg); background-position:center right; background-size:contain; background-repeat:no-repeat; min-height:350px;")
+		.row
+			.intro-panel-content(style="padding-right:20%;")
+				h1 Example heading
+				p Employment and Support Allowance (ESA) is for people who have an illness, health condition or disability that makes it difficult or impossible to work.
 
 block sidebar
 	include ../template/sidebar-brand.jade
