--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -85,12 +85,11 @@ h4 > .ref-heading__toggle {
 
 // Breaks the modular nature
 .revealable__heading > .ref-heading__toggle {
-    font-size: 1/1.5em;
-    padding-top: .2*1.5em;
+    //font-size: 1/1.5em;
+    margin-right: 3rem;
 }
 
 .ref-added {
-	margin-right: unit(@box-spacing-horizontal*.4*@base-size,px);
 	margin-right: @box-spacing-horizontal*.4;
 }
 
@@ -114,7 +113,6 @@ h4 > .ref-heading__toggle {
 
 .ref-dialog__list-item {
 	position: relative;
-	padding-right: unit(@box-spacing-horizontal*2*@base-size,px); // Space for the delete button
 	padding-right: @box-spacing-horizontal*2; // Space for the delete button
 }
 
