Made link underline colours the same as link text across the board

--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -129,7 +129,7 @@ small {
 a {
     color: @link-color;
     text-decoration: none;
-    border-bottom: 1px solid lighten(@link-color, 40%);
+    border-bottom: 1px solid currentColor;
 
     &:hover,
     &:focus {
