--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -14,18 +14,17 @@
         p a {
             border-bottom: none;
             &:hover {
-                border-bottom: 0.0625rem solid @heritage-yellow-darker;
+                border-bottom: 0.0625rem solid;
             }
         }
         .badge {
-            margin-right: unit(@box-spacing-horizontal*@base-size,px);
             margin-right: @box-spacing-horizontal;
         }
     }
     &__adviser {
         background-color: @inventive-teal-lighter;
         p a:hover {
-            border-bottom: 0.0625rem solid @inventive-teal-light;
+            border-bottom: 0.0625rem solid;
         }
         .badge {
             background-color: @inventive-teal;
@@ -39,7 +38,6 @@
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .section-notice__content {
-        padding-right: unit(@box-spacing-horizontal*3.5*@base-size,px);
         padding-right: @box-spacing-horizontal*3.5;
     }
 }
@@ -70,7 +68,6 @@
         .badge {
             background-color: @green-light;
             color: @text-color;
-            margin-right: unit(@box-spacing-horizontal*@base-size,px);
             margin-right: @box-spacing-horizontal;
         }
     }
@@ -88,7 +85,6 @@
         .badge {
             background-color: @heritage-yellow;
             color: @text-color;
-            margin-right: unit(@box-spacing-horizontal*@base-size,px);
             margin-right: @box-spacing-horizontal;
         }
     }
@@ -99,7 +95,6 @@
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .section-notice__content {
-        padding-right: unit(@box-spacing-horizontal*3.5*@base-size,px);
         padding-right: @box-spacing-horizontal*3.5;
     }
 }
