--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -62,6 +62,10 @@ h6 {
     font-weight:    @font-weight-bolder;
     margin-top:     1em;
     margin-bottom:  0.6em;
+    b,
+    strong {
+        font-weight: inherit;
+    }
 }
 
 h1 {
