Update side-links styling to match sub-navigation style

--- a/libs/modules/side-tags.less
+++ b/libs/modules/side-tags.less
@@ -7,6 +7,10 @@
 
  .side-tags:extend(.box--side all) {
 
+    h2 {
+        font-size: @font-size-large;
+    }
+
     & > ul {
         list-style-type: none;
         padding-left: 0;
