--- a/libs/modules/side-links.less
+++ b/libs/modules/side-links.less
@@ -9,16 +9,22 @@
 
  .side-links:extend(.box--side all),
  .side-tags:extend(.box--side all) {
+
+    padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
+
+    h2 {
+        font-size: @font-size-large;
+    }
     
     & > ul {
         list-style-type: none;
         padding-left: 0;
 
         & li a {
-            background: url("assets/images/blue-arrow.gif") no-repeat left unit(@box-spacing-horizontal*.5*@base-size,px);
-            background: url("assets/images/blue-arrow.gif") no-repeat left @box-spacing-horizontal*.5;
-            display: inline-block;
-            padding-left: 18px;
+            //background: url("assets/images/blue-arrow.gif") no-repeat left unit(@box-spacing-horizontal*.5*@base-size,px);
+            //background: url("assets/images/blue-arrow.gif") no-repeat left @box-spacing-horizontal*.5;
+            //display: inline-block;
+            //padding-left: 18px;
         }
 
     }
