--- a/libs/modules/side-links.less
+++ b/libs/modules/side-links.less
@@ -13,7 +13,8 @@
     padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
 
     h2 {
-        font-size: @font-size-large;
+        font-size: @font-size-h3;
+        font-weight: @font-weight-boldest;
     }
     
     & > ul {
