Added :disabled support to buttons

--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -60,7 +60,8 @@ input[type=button] {
 }
 
 .btn-disabled,
-.button--grey {
+.button--grey,
+button:disabled {
     cursor: not-allowed;
     .btn(
     @gray-3,
