Fixed references dialog buttons and icons

--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -125,10 +125,12 @@ h4 > .ref-heading__toggle {
 	padding: .1em .2em;
 	background: none;
 	color: @red;
+	border: none;
 	&:hover,
 	&:focus,
 	&:active {
 		background: none;
+		border: none;
 	}
 }
 .ref-dialog__list-item--removed {
@@ -141,3 +143,8 @@ li.ref-dialog__list-item--highlight {
     background-color: @gray-8;
 }
 
+.dialog__footer .button i {
+	float: right;
+    color: @white;
+    padding-left: .75rem;
+}
