Removed underlines from dropdown links

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -146,12 +146,15 @@ html[lang="en-SCT"] .main-nav {
     margin-top: 1em;
     width: 300px; /* One column - two column is set below */
 
+    a {
+        border-bottom: 0;
+    }
+
     ul {
         /*.arrow-list;*/
         list-style: none;
         margin-left: 0;
         padding-left: 0;
-        a { border-bottom: 0; }
     }
 
     .view-all {
