Fixed strange whitespace beside consumer dropdown

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -271,3 +271,10 @@ html[lang="en-SCT"] .main-nav {
 .active > .mega-menu {
     display: table;
 }
+
+.mega-menu--hide-left {
+    width: 300px;
+    .mega-menu__right {
+        width: 100%;
+    }
+}
