--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -92,6 +92,7 @@
     padding: .1em .5em;
     white-space: nowrap;
     display: inline-block;
+    font-size: @font-size-small;
 
     a {
         border: none;
@@ -100,6 +101,7 @@
     &:link {
         color: @black;
         text-decoration: none;
+        border: none;
     }
 
     i {
