Padding on breadcrumb in extent was too small

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -89,10 +89,11 @@
     background-color: @white;
     display: inline-block;
     color: @black;
-    padding: .1em .5em;
+    padding: .35em .5em;
     white-space: nowrap;
     display: inline-block;
     font-size: @font-size-small;
+    margin-right: .25em;
 
     a {
         border: none;
