Removed white underline on 'more' dropdown

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -112,6 +112,7 @@ html[lang="en-SCT"] .main-nav {
             padding: .4em;
             font-weight: @font-weight-bold;
             white-space: nowrap;
+            border: none;
 
             &:hover, &:focus {
                 background: @white;
