Fixed missing styles on wells

--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -153,6 +153,7 @@
         @callout-border: @gray-6
     );
     .callout--border;
+    .dap-panel;
     border-radius: @form-border-radius;
 }
 .well--outline {
@@ -161,6 +162,7 @@
         @callout-border: @heritage-blue
     );
     .callout--border;
+    .dap-panel;
     border-radius: @form-border-radius;
     h2 {
         color: @heritage-blue
