Added padding on the mobile sharebar, to stop it touching the edge of the screen

--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -39,6 +39,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
 
         @media (max-width: @screen-xs-max) {
             position: static;
+            padding: 0 1rem;
         }
     }
 
