Removed the css for mobile sidebar, which shouldnt have been in there

--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -93,6 +93,23 @@
             border: none;
         }
     }
+    /*.side-nav-beta__heading + li {
+        display: block;
+    }
+    @media screen and (max-width: @screen-xs-max) {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        max-height: 100%;
+        overflow: scroll;
+        background-color: @white;
+        margin: 0;
+        box-shadow:  0px -2px 0px 0px @gray-7;
+        .side-nav-beta__heading + li {
+            display: none;
+        }
+    }*/
 }
 
 .side-nav {
