Added padding to mobile header

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -53,6 +53,7 @@
         float: none;
         max-width: 100%;
         background-color: @heritage-blue;
+        padding: .5rem 0;
         img {
             max-width: 70%;
             padding: .5 0;
@@ -61,7 +62,6 @@
             display: block;
             text-align: center;
             margin: 0;
-            padding-top: .5;
         }
     }
 }
