Removed logo underline on hover

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -42,6 +42,9 @@
     margin-top: .7em; // Slightly better centering
     max-width: 30%; // For old IE
     max-width: calc(300px); // For modern browsers
+    &:hover {
+        border: none;
+    }
 
     @media ( max-width: @screen-xs-max ) {
         display: none;
