Made the environment marker absolute instead of fixed, to avoid distractions while testing witht he public

--- a/libs/modules/environment-marker.less
+++ b/libs/modules/environment-marker.less
@@ -6,7 +6,8 @@
 
 
 .environment-marker {
-    position: fixed;
+    //position: fixed;
+    position: absolute;
     top: 0;
     right:0;
     left:0;
