--- a/libs/modules/environment-marker.less
+++ b/libs/modules/environment-marker.less
@@ -1,7 +1,8 @@
 ﻿/**
  * ENVIRONMENT MARKER
  *
- * Example unknown.
+ * These are the tabs displayed at the top of dev machines to show which machine you're on.
+ * For example, at the top of the UAT machine.
  */
 
 
