Added a white background to main-container to stop Episerver giving it a grey gradient

--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -19,6 +19,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
 .main-container {
     // Used to wrap
     position: relative;
+    background-color: @white;
 }
 
 // Fixes an issue with spacing when the section notice is present
