Border and auto-height images in articleContent

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -77,6 +77,13 @@
     }
 }
 
+
+.articleContent img {
+    height: auto;
+    border: 1px solid @blue-light;
+    border-radius: 2px;
+}
+
 // @todo This needs renamed
 .articleContent {
      @media ( max-width: @screen-sm-max ) {
