--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -168,7 +168,7 @@
 
 .a-social-top {
     .icon;
-    line-height: 2.5rem;
+    //line-height: 2.5rem;
     display: inline-block;
     padding: 0 0.45em 0 0;
     border-bottom: 0;
