Add image style and link style to articleContent

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -84,6 +84,13 @@
     border-radius: 2px;
 }
 
+.blockLinks {
+    border: 1px solid @heritage-blue;
+    padding: 15px;
+    background-color: @blue-light;
+    font-weight: 700;
+}
+
 // @todo This needs renamed
 .articleContent {
      @media ( max-width: @screen-sm-max ) {
