--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -279,3 +279,15 @@ html[lang="en-SCT"] .main-nav {
         width: 100%;
     }
 }
+
+.main-header__logout__button {
+    background: none;
+    border: none;
+    padding: 0;
+    font-weight: normal;
+    color: @heritage-blue;
+}
+
+.main-header__logout {
+    display: inline-block;
+}
